# model_handler

./: .env.example  .gitignore  Dockerfile  Dockerfilechchchch  LICENSE  README.md  api.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  liara.json  macmac  macmac.pub  main.py  monitor_memory.py  pyproject.toml  requirements.txt
model_handler_service/: .env.example  .gitignore  Dockerfile  README.md  api.py
model_handler_service/src/model_handler_service/: color.py  config.py  test.py
model_handler_service/src/model_handler_service/core/: loaders.py
src/model_handler_service/: color.py  load_and_predict_man.py  load_and_predict_woman.py
src/model_handler_service/core/: config.py  logger.py  processing.py  validations.py
tests/: conftest.py  test_api.py
